[gd_scene load_steps=5 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://Default.theme" type="Theme" id=2]
[ext_resource path="res://Button.tres" type="StyleBox" id=3]

[sub_resource type="StyleBoxFlat" id=1]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Options" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="Options"]
margin_left = 258.0
margin_top = 73.0
margin_right = 386.0
margin_bottom = 87.0
theme = ExtResource( 2 )
text = "Choose your settings:"

[node name="SeperateScore" type="CheckButton" parent="Options"]
margin_left = 236.0
margin_top = 120.0
margin_right = 411.0
margin_bottom = 160.0
text = "Seperate Score"

[node name="SeperateCombo" type="CheckButton" parent="Options"]
margin_left = 231.0
margin_top = 193.0
margin_right = 416.0
margin_bottom = 233.0
text = "Seperate Combo"

[node name="Next" type="Button" parent="Options"]
margin_left = 297.0
margin_top = 264.0
margin_right = 339.0
margin_bottom = 284.0
text = "Next"

[node name="SongSelect" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="SongSelect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 140.0
margin_top = 40.0
margin_right = -140.0
margin_bottom = -40.0

[node name="ScrollContainer" type="ScrollContainer" parent="SongSelect/MarginContainer"]
margin_right = 360.0
margin_bottom = 280.0
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="SongSelect/MarginContainer/ScrollContainer"]
margin_right = 114.0
margin_bottom = 360.0

[node name="Button" type="Button" parent="SongSelect/MarginContainer/ScrollContainer/VBoxContainer"]
margin_right = 114.0
margin_bottom = 20.0
text = "Artificial Chariot"

[node name="Button2" type="Button" parent="SongSelect/MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 114.0
margin_bottom = 37.0
theme = ExtResource( 2 )
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = ExtResource( 3 )
text = "Default"

[node name="Button3" type="Button" parent="SongSelect/MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 41.0
margin_right = 114.0
margin_bottom = 54.0
theme = ExtResource( 2 )
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = ExtResource( 3 )
text = "Default"

[node name="Button4" type="Button" parent="SongSelect/MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 58.0
margin_right = 114.0
margin_bottom = 71.0
theme = ExtResource( 2 )
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = ExtResource( 3 )
text = "Default"

[node name="Button5" type="Button" parent="SongSelect/MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 75.0
margin_right = 114.0
margin_bottom = 88.0
theme = ExtResource( 2 )
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = ExtResource( 3 )
text = "Default"

[node name="Button6" type="Button" parent="SongSelect/MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 92.0
margin_right = 114.0
margin_bottom = 105.0
theme = ExtResource( 2 )
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = ExtResource( 3 )
text = "Default"

[node name="Button7" type="Button" parent="SongSelect/MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 109.0
margin_right = 114.0
margin_bottom = 122.0
theme = ExtResource( 2 )
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = ExtResource( 3 )
text = "Default"

[node name="Button8" type="Button" parent="SongSelect/MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 126.0
margin_right = 114.0
margin_bottom = 139.0
theme = ExtResource( 2 )
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = ExtResource( 3 )
text = "Default"

[node name="Button9" type="Button" parent="SongSelect/MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 143.0
margin_right = 114.0
margin_bottom = 156.0
theme = ExtResource( 2 )
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = ExtResource( 3 )
text = "Default"

[node name="Button10" type="Button" parent="SongSelect/MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 160.0
margin_right = 114.0
margin_bottom = 173.0
theme = ExtResource( 2 )
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = ExtResource( 3 )
text = "Default"

[node name="Button11" type="Button" parent="SongSelect/MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 177.0
margin_right = 114.0
margin_bottom = 190.0
theme = ExtResource( 2 )
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = ExtResource( 3 )
text = "Default"

[node name="Button12" type="Button" parent="SongSelect/MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 194.0
margin_right = 114.0
margin_bottom = 207.0
theme = ExtResource( 2 )
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = ExtResource( 3 )
text = "Default"

[node name="Button13" type="Button" parent="SongSelect/MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 211.0
margin_right = 114.0
margin_bottom = 224.0
theme = ExtResource( 2 )
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = ExtResource( 3 )
text = "Default"

[node name="Button14" type="Button" parent="SongSelect/MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 228.0
margin_right = 114.0
margin_bottom = 241.0
theme = ExtResource( 2 )
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = ExtResource( 3 )
text = "Default"

[node name="Button15" type="Button" parent="SongSelect/MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 245.0
margin_right = 114.0
margin_bottom = 258.0
theme = ExtResource( 2 )
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = ExtResource( 3 )
text = "Default"

[node name="Button16" type="Button" parent="SongSelect/MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 262.0
margin_right = 114.0
margin_bottom = 275.0
theme = ExtResource( 2 )
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = ExtResource( 3 )
text = "Default"

[node name="Button17" type="Button" parent="SongSelect/MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 279.0
margin_right = 114.0
margin_bottom = 292.0
theme = ExtResource( 2 )
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = ExtResource( 3 )
text = "Default"

[node name="Button18" type="Button" parent="SongSelect/MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 296.0
margin_right = 114.0
margin_bottom = 309.0
theme = ExtResource( 2 )
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = ExtResource( 3 )
text = "Default"

[node name="Button19" type="Button" parent="SongSelect/MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 313.0
margin_right = 114.0
margin_bottom = 326.0
theme = ExtResource( 2 )
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = ExtResource( 3 )
text = "Default"

[node name="Button20" type="Button" parent="SongSelect/MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 330.0
margin_right = 114.0
margin_bottom = 343.0
theme = ExtResource( 2 )
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = ExtResource( 3 )
text = "Default"

[node name="Button21" type="Button" parent="SongSelect/MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 347.0
margin_right = 114.0
margin_bottom = 360.0
theme = ExtResource( 2 )
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = ExtResource( 3 )
text = "Default"

[connection signal="pressed" from="Options/Next" to="." method="_on_Next_pressed"]
